# test_project

./: .gitignore  BASELINES.md  PROPOSAL.md  README.md  paper_extract.txt  pyproject.toml  researchplan.md
configs/: npz_pdsi_template.json  npz_setm_template.json  sleepedf_template.json  synthetic_baseline_smoke.json  synthetic_pdsi_smoke.json  synthetic_setm_smoke.json  synthetic_uniform_smoke.json
paper/: capture_pdf_page.js  reframed_main_draft.md  render_reframed_pdf.py
scripts/: link_existing_datasets.sh  make_experiment_matrix.py  preprocess_chbmit.py  preprocess_ptbxl.py  preprocess_sleepedf.py  profile_model.py  run_aeon_baseline.py  run_experiment.py  run_full_neurips_pipeline.sh  select_best_sweep.py  setup_official_baselines.sh  summarize_results.py
src/pdsi/: __init__.py
src/pdsi/data/: __init__.py  arrays.py  synthetic.py
src/pdsi/models/: __init__.py  complexity.py  gates.py  inception.py  setm.py
src/pdsi/training/: __init__.py  metrics.py  trainer.py
