[project]
name = "pdsi"
version = "0.1.0"
description = "Phase-Decoupled Spectral Inception for compute-bounded biomedical time-series classification."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.8",
    "pandas>=2.0",
]
physionet = [
    "mne>=1.6",
    "wfdb>=4.1",
]
baselines = [
    "aeon>=1.0",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
